--- a/shutdown_host.yml
+++ b/shutdown_host.yml
@@ -1,6 +1,7 @@
 ---
 
-- host: all
+- hosts: all
+  gather_facts: false
   tasks:
     - name: Unconditionally shut down the machine with all defaults
       community.general.shutdown:
