--- a/shutdown_host.yml
+++ b/shutdown_host.yml
@@ -1,7 +1,6 @@
 ---
-
-- hosts: all
-  gather_facts: false
+- name: Unconditionally shut down the machine with all defaults
+  hosts: all
   tasks:
-    - name: Unconditionally shut down the machine with all defaults
+    - name: shutdown
       community.general.shutdown:
